Opened 16 years ago

Closed 16 years ago

#2980 closed bug (fixed)

Event and Sound columns shouldn't be fixed

Reported by: franxico Owned by: anevilyak
Priority: normal Milestone: R1
Component: Preferences/Sounds Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

In the Sounds preferences, these two columns are fixed. So if you have a long description in the Event column, it will mix with the Sound column. Resizing the window won't change anything.

Rev 28327, VMWare

Attachments (3)

sounds preflet.png (31.7 KB ) - added by franxico 16 years ago.
Sounds Preferences
sound_preferences.jpg (27.8 KB ) - added by miqlas 16 years ago.
The listview don't have borders
soundsapp.png (21.8 KB ) - added by richienyhus 16 years ago.
Chosen sounds do not show up apart from when selected in listview.

Download all attachments as: .zip

Change History (16)

by franxico, 16 years ago

Attachment: sounds preflet.png added

Sounds Preferences

comment:1 by korli, 16 years ago

Could you check in hrev28359 please ?

comment:2 by diver, 16 years ago

src/preferences/sounds/HWindow.cpp have nonexistent HEventItem.h included

comment:3 by diver, 16 years ago

This bug (HEventItem.h too) seems to be fixed now, but now there are many other problems with ColumnListView, like buggy redraw, double clicking column separator not working, cloumn resizing, empty lines at the bottom, font sensitivity, etc...

comment:4 by anevilyak, 16 years ago

What kind of font sensitivity issues were you seeing exactly? Double clicking column separator and empty lines at least should be fixed now.

comment:5 by diver, 16 years ago

  1. If you will change Font size to 18px you sould see that column text doesn't fit in column high. In Tracker column high and text size is always fixed.
  2. Double clicking column separator still have some problems: on the first click column separator moves by 1 pixel to the left.

Srtange thing is that I thought that DriveSetup is also using CLV, but double clicking column separator still doesn't work there.

  1. Slow resizing of Sounds window will also show some artifacts in listview.
  2. Also <none> text in "Sound" column will only appear if you click every listitem.

Maybe I should open 4 bug reports on these?

in reply to:  5 ; comment:6 by korli, 16 years ago

Replying to diver:

  1. If you will change Font size to 18px you sould see that column text doesn't fit in column high. In Tracker column high and text size is always fixed.
  2. Double clicking column separator still have some problems: on the first click column separator moves by 1 pixel to the left.

Srtange thing is that I thought that DriveSetup is also using CLV, but double clicking column separator still doesn't work there.

=> DriveSetup uses custom widgets, so a bit of work is needed.

  1. Slow resizing of Sounds window will also show some artifacts in listview.
  2. Also <none> text in "Sound" column will only appear if you click every listitem.

Maybe I should open 4 bug reports on these?

Dunno. Though Sounds only uses standard column types, these bugs might better fit in Interface Kit then.

in reply to:  6 comment:7 by anevilyak, 16 years ago

Replying to korli:

=> DriveSetup uses custom widgets, so a bit of work is needed.

  1. Slow resizing of Sounds window will also show some artifacts in listview.
  2. Also <none> text in "Sound" column will only appear if you click every listitem.

Maybe I should open 4 bug reports on these?

Some of that could be scrolling related, I've noticed some drawing artifacts in Vision's textview also that I never saw on R5 or Dano, but mainly when scrolling.

comment:8 by franxico, 16 years ago

Seems very nice to me in R28387. Great work, thanks! :)

comment:9 by miqlas, 16 years ago

The new sound_pref window looks better, but have some problems, the listview don't have borders. Check the shoot.

by miqlas, 16 years ago

Attachment: sound_preferences.jpg added

The listview don't have borders

comment:10 by marcusoverhagen, 16 years ago

Owner: changed from marcusoverhagen to haiku-web

comment:11 by anevilyak, 16 years ago

Owner: changed from haiku-web to anevilyak

comment:12 by richienyhus, 16 years ago

Chosen sounds do not show up apart from when selected in listview.

'Sounds' also becomes unstable after playing the event sounds.

Event sounds also don't seem to work ie. startup.wav dose not play even if set in 'sounds'.

by richienyhus, 16 years ago

Attachment: soundsapp.png added

Chosen sounds do not show up apart from when selected in listview.

comment:13 by anevilyak, 16 years ago

Resolution: fixed
Status: newclosed

The redraw problem is fixed in hrev28658. I cannot reproduce the instability problem mentioned, but as it has nothing to do with the columns or drawing, please open a separate ticket if you're still seeing that.

Note: See TracTickets for help on using tickets.