Fix a few minor problems that resulted in the sound column not being drawn until clicked. Also changed CLV to use B_PLAIN_BORDER. This fixes the redraw issues in ticket #2980.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28658 a95241bf-73f2-0310-859d-f6bbb57e9c96